@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10093.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10120.tgz',
      'xapian-core.tgz',
-     '3bfdf1a369941801c611053f34ddc35494c17759',
+     '3fca384fe0c032645904426a6f2fe51933cd79e4',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10093.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10120.tgz',
      'xapian-bindings.tgz',
-     '2c22cd2475842142906bbc408bdeac946da82c22',
+     '6e8ee51c73ee1a9d8a616eb409a6232c5ac6d93d',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10093.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10120.tgz',
      'win32msvc.tgz',
-     '1f9e6bb763e39c324a37b6e655188f96192eca20',
+     '12fd46fad4a1bf986d91a94127961628d3a0e37e',
      'xapian-core/win32',
     ),
 )
