@@ -1,3 +1,7 @@
+Thu Feb 21 01:50:17 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Update with new tarballs.
+
 Thu Feb 21 01:23:46 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/make_xappy_tarballs: Update the branchpoint version
